--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,17 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: DatNinchi040
+  properties:
+  - name: Hizuke
+  - name: Basyo
+
+- kind: DatNinchi040
+  properties:
+  - name: Hizuke
+    direction: desc
+  - name: Basyo
+
 - kind: DatSoudan
   properties:
   - name: Hizuke
